fix(comp:table): align not work with selectable

--- a/packages/components/table/style/index.less
+++ b/packages/components/table/style/index.less
@@ -100,10 +100,18 @@
   &-cell-align {
     &-center {
       text-align: center;
+
+      .@{table-prefix}-cell-triggers {
+        justify-content: center;
+      }
     }
 
     &-end {
       text-align: end;
+
+      .@{table-prefix}-cell-triggers {
+        justify-content: end;
+      }
     }
   }
 
